# Voxel-Cone-Tracing

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
data/models/crytek-sponza/: sponza.mtl
data/models/teapot/: teapot.max
include/: Camera.h  Controls.h  HighResClock.h  Material.h  Mesh.h  Object.h  Shader.h  Texture.h  VCTApplication.h
shaders/: clearVoxels.frag  clearVoxels.vert  quad.frag  quad.vert  renderVoxels.frag  renderVoxels.geom  renderVoxels.vert  shadow.frag  shadow.vert  shadowtest.frag  simple.frag  simple.geom  simple.vert  standard.frag  standard.vert  voxelization.frag  voxelization.geom  voxelization.vert
src/: Camera.cpp  Controls.cpp  HighResClock.cpp  Material.cpp  Mesh.cpp  Object.cpp  Shader.cpp  VCTApplication.cpp  main.cpp
